# enigma2

./: AUTHORS  BoxBrandingTest.py  Makefile.am  Navigation.py  PowerTimer.py  README.md  RecordTimer.py  ServiceReference.py  configure.ac  e2reactor.py  enigma2.bb  mytest.py  pyo_patcher.py  skin.py  timer.py  upgrade.py
data/fonts/: Makefile.am
lib/bitratecalc/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CutListEditor/: plugin.py
lib/python/Plugins/Extensions/DVDBurn/: MediumToolbox.py  Process.py  Project.py  ProjectSettings.py  TitleList.py  TitleProperties.py  plugin.py
lib/python/Plugins/Extensions/EPGImport/: EPGImport.py  Makefile.am  epgdat.py  plugin.py  rytec.sources.xml  sourcelist
lib/python/Plugins/Extensions/GraphMultiEPG/: GraphMultiEpg.py
lib/python/Plugins/Extensions/HbbTV/: Makefile.am  __init__.py  aitreader.py  bookmark.py  plugin.py
lib/python/Plugins/Extensions/LDteam/: ExtraActionBox.py  ExtraMessageBox.py  LdAbout.py  LdBlue.py  LdCrondManager.py  LdDevice.py  LdDeviceManager.py  LdDisks.py  LdEparted.py  LdEpg.py  LdFormat.py  LdHardware.py  LdHddInfo.py  LdHddMount.py  LdHddPartitions.py  LdHddSetup.py  LdNetworkSetup.py  LdPlugin.py  LdRestartNetwork.py  LdScripts.py  LdServ.py  LdSet.py  LdSwapManager.py  LdTeam.py  LdTunerServer.py  LdUtil.py  Ldsundtek.py  Makefile.am  MountManager.py  ScriptRunner.py  plugin.py
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py  settings.py
lib/python/Plugins/Extensions/MediaScanner/: plugin.py
lib/python/Plugins/Extensions/MiniTV/: plugin.py
lib/python/Plugins/Extensions/OpenIPTV/: Makefile.am  chanels.xml  plugin.py
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/ProgrammlistenUpdater/: downloader.py  history.py  plugin.py  restore.py  settinglist.py
po/: ar.po  (+39 more)
(+487 files in other folders)
