installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	time.ttf \
	DejaVuSans.ttf \
	nmsbd.ttf \
	Daconi-digital-Bold.ttf \
	Daconi-digital-watch.ttf \
	nmsbd2.ttf Verdana_R.ttf \
	DacoMark_Reg.ttf

	
if VUULTIMO
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif

if VUDUO2
dist_install_DATA += analog.ttf MyriadPro-Regular.otf MyriadPro-Semibold.otf MyriadPro-SemiboldIt.otf
endif
