installdir = $(pkglibdir)/python/Plugins/Extensions/EPGImport

install_PYTHON =	\
	__init__.py \
	plugin.py \
	boot.py \
	dreamcrc.so \
	EPGConfig.py \
	epgdat.py \
	epgdat_importer.py \
	EPGImport.py \
	gen_xmltv.py \
	log.py \
	OfflineImport.py \
	plugin.png \
	rytec.sources.xml \
	sourcelist \
	xmltvconverter.py


